# tierkreis

./: devenv.nix  justfile  pyproject.toml
docs/source/: conf.py  core_concepts.md  getting_started.md  index.md  logging_and_errors.md
docs/source/tutorial/: loop.md
docs/source/worker/: external_workers.md  hello_world.md  index.md
examples/: error_handling_graph.py  qsci_graph.py  quantinuum_submission.py
examples/example_workers/chemistry_worker/: main.py  pyproject.toml  stubs.py
examples/example_workers/error_worker/: main.py  pyproject.toml  stubs.py
examples/example_workers/hello_world_worker/: main.py  pyproject.toml  stubs.py
examples/example_workers/qsci_worker/: pyproject.toml
tierkreis/: pyproject.toml
tierkreis/tests/: conftest.py
tierkreis/tierkreis/: __init__.py  builder.py  consts.py  logger_setup.py  namespace.py  pytket_worker.py  quantinuum_worker.py  storage.py
tierkreis_core/: Cargo.toml  pyproject.toml
tierkreis_core/python/tierkreis_core/: __init__.py  aliases.py  aliases.pyi  nodes.pyi  steps.pyi
tierkreis_core/python/tierkreis_core/_tierkreis_core/: graph.pyi  identifiers.pyi  location.pyi
tierkreis_core/rust/: graph.rs  identifiers.rs  lib.rs  location.rs  value.rs
tierkreis_visualization/: openapi.json
tierkreis_visualization/frontend/: package-lock.json  package.json
tierkreis_visualization/tierkreis_visualization/: app.py  config.py  main.py  openapi.py  storage.py  visualize_graph.py
tierkreis_workers/nexus_worker/: main.py  pyproject.toml  stubs.py
tierkreis_workers/pytket_worker/: main.py
tierkreis_workers/quantinuum_worker/: main.py  pyproject.toml  stubs.py
(+87 files in other folders)
