[project]
name = "tkr_quantinuum_worker"
version = "0.1.0"
description = "A tierkreis worker for compilation of quanitnuum backends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytket-quantinuum>=0.54.0",
    "qnexus==0.37.1",
    "tierkreis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr_quantinuum_worker = "main:main"
